--- a/AdobeSignRESTClient/AdobeSignRESTClient.csproj
+++ b/AdobeSignRESTClient/AdobeSignRESTClient.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
+    <PackageReference Include="RestSharp" Version="106.5.4" />
   </ItemGroup>
 
   <ItemGroup>
